# ai-canvas-scoops

./: .env.example  .gitignore  README.md  index.html  tailwind.config.ts
backend/: .env.example  .gitignore  README.md  pyproject.toml  run_server.py
backend/src/: app.py  main.py  settings.py
backend/src/agents/: cost_calculator.py  game_data_adapter.py  image_generator.py  orchestrator.py  reasoning_tracer.py  selection_mapping.py
backend/src/api/: __init__.py  main.py  routes.py
backend/src/database/: db_dump.csv  ingredients.db  load_database.py
backend/src/mcp/: server.py
backend/src/models/: __init__.py  game_data.py  image_instructions.py  processing_result.py  reasoning_step.py
backend/src/storage/: __init__.py  session_memory.py  session_models.py
backend/src/tools/: __init__.py  image_generator.py  image_generator_ultra.py  mcp_client.py  mock_image_generator.py
backend/src/workflows/: __init__.py  decision_nodes.py  langgraph_workflow.py  simple_workflow.py  state_models.py  workflow_nodes.py
src/: index.css
src/components/: AIThinkingScreen.tsx  ChatInterface.tsx  FinalReveal.tsx  ImageSelectionRound.tsx  PlayerSetup.tsx  RealTimeCostDisplay.tsx  VisualCanvas.tsx  WelcomeScreen.tsx
src/hooks/: useImageGeneration.ts  useIngredientsInventory.ts  useRealTimeCosts.ts
src/pages/: AIStudio.tsx  Index.tsx
src/services/: api.ts
src/types/: ai-response.ts
src/utils/: aiConversationGenerator.ts
